# random-stitches-app

./: .coverage  .gitignore  README.md  init.sh  pyproject.toml  requirements.txt
src/: app.py  create_random_stitches.py
tests/: test_random_stitches.py
